--- a/WPFClient/MainWindow.xaml
+++ b/WPFClient/MainWindow.xaml
@@ -23,16 +23,15 @@
             <TextBlock Margin="10,10,0,0" Padding="0,10" Width="50" Height="60" HorizontalAlignment="Left">
                     Статус:
             </TextBlock>
-            <TextBlock x:Name="Status" Margin="10,10,0,0" Padding="0,10" Width="Auto" Height="60"></TextBlock>
+            <TextBlock x:Name="Status" Margin="10,10,0,0" Padding="0,10" Width="Auto" Height="60" HorizontalAlignment="Stretch" TextWrapping="Wrap" Foreground="Indigo"></TextBlock>
         </WrapPanel>
-
+        
         <StackPanel Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Background="LightGray" Orientation="Horizontal"  VerticalAlignment="Center" Height="60">
             <Label VerticalAlignment="Center" HorizontalAlignment="Left">Текст задания:</Label>
             <TextBox x:Name="txb" Margin="10,5" Padding="5" Width="425"/>
         </StackPanel>
         <StackPanel Grid.Column="2" Grid.Row="1" Height="60" VerticalAlignment="Center" Background="LightGray" Orientation="Horizontal">
             <Button x:Name="Add" Margin="20, 10" Content="Добавить задание" Height="40" VerticalAlignment="Center" Background="#8570F1" Foreground="Black" Width="220" Click="Add_Click"/>
-
         </StackPanel>
 
         <StackPanel Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="3">
@@ -42,8 +41,8 @@
                         <GridView.Columns>
                             <GridViewColumn DisplayMemberBinding="{Binding Path=Id}" Width="60">Id</GridViewColumn>
                             <GridViewColumn DisplayMemberBinding="{Binding Path=Description}" Width="420">Описание</GridViewColumn>
-                            <GridViewColumn DisplayMemberBinding="{Binding Path=StartedOn}" Width="140">Начало выполнения</GridViewColumn>
-                            <GridViewColumn DisplayMemberBinding="{Binding Path=CompletedOn}" Width="140">Завершение выполнения</GridViewColumn>
+                            <GridViewColumn DisplayMemberBinding="{Binding Path=StartedOn}" Width="145">Начало выполнения</GridViewColumn>
+                            <GridViewColumn DisplayMemberBinding="{Binding Path=CompletedOn}" Width="145">Завершение выполнения</GridViewColumn>
                         </GridView.Columns>
                     </GridView>
                 </ListView.View>
